[package]
name = "fmaverick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
aws-config = "0.15"
aws-sdk-dynamodb = "0.15"
uuid = { version = "1.1.2", features = ["v4"] }
actix-multipart = "0.4.0"
futures-util = "0.3.21"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["tokio-runtime"]